[gd_scene load_steps=7 format=3 uid="uid://bmva7ij7veq7i"]

[ext_resource type="PackedScene" uid="uid://dk2q005lyuk3l" path="res://scenes/Cells/property_cell.tscn" id="1_anvxg"]
[ext_resource type="Script" uid="uid://2rykoxxqtbjj" path="res://scripts/Cells/street_cell.gd" id="2_2uyr2"]

[sub_resource type="Theme" id="Theme_bfbtl"]

[sub_resource type="LabelSettings" id="LabelSettings_6u1e1"]
font_size = 14
font_color = Color(0, 0, 0, 1)

[sub_resource type="GDScript" id="GDScript_6u1e1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fd0qy"]
script = SubResource("GDScript_6u1e1")

[node name="StreetCell" instance=ExtResource("1_anvxg")]
script = ExtResource("2_2uyr2")
group_color = null

[node name="BackGround" parent="." index="0"]
pivot_offset = Vector2(60, 75)
theme = SubResource("Theme_bfbtl")
color = Color(0.85098, 0.909804, 0.839216, 1)

[node name="ColorGroup" type="TextureRect" parent="BackGround" index="0"]
texture_filter = 2
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 37.0
grow_horizontal = 2
pivot_offset = Vector2(60, 18.5)
expand_mode = 3

[node name="Name" parent="BackGround" index="1"]
anchors_preset = 8
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -23.0
offset_right = 30.0
offset_bottom = 0.0
grow_vertical = 2
label_settings = SubResource("LabelSettings_6u1e1")

[node name="proplabel" parent="." index="1"]
material = SubResource("ShaderMaterial_fd0qy")

[node name="Panel" parent="." index="2"]
offset_left = -64.0
offset_right = 56.0
